# jkdl-svg

./: .gitignore  CMakeLists.txt  LICENSE  README  TODO
src/: CMakeLists.txt  Makefile  edge.cxx  edge.h  loader.cxx  loader.h  network.cxx  network.h  unimplemented.cxx  unimplemented.h  vertex.cxx  vertex.h
tests/: CMakeLists.txt  Makefile  geometry.cxx  loader.cxx
